--- a/Tyuiu.MkhitaryanSG.Sprint6.Task7.V18.Test/Tyuiu.MkhitaryanSG.Sprint6.Task7.V18.Test.csproj
+++ b/Tyuiu.MkhitaryanSG.Sprint6.Task7.V18.Test/Tyuiu.MkhitaryanSG.Sprint6.Task7.V18.Test.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.MkhitaryanSG.Sprint6.Task7.V18.Lib\Tyuiu.MkhitaryanSG.Sprint6.Task7.V18.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
